--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EdgeLeder Website</title>
-</head>
-<body>
 
+    <title>EdgeLedger Website</title>
+
+    <!--font-awesome-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet">
+
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body id="home">
+<!--NAVBAR-->
+<nav id="navbar">
+    <h1 class="logo">
+        <span class="text-primary">
+            <i class="fas fa-book-open"></i> Edge
+        </span> Ledger
+    </h1>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#what">What</a></li>
+        <li><a href="#who">Who</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+<!--/ NAVBAR-->
 </body>
 </html>
