--- a/index.html
+++ b/index.html
@@ -28,5 +28,22 @@
     </ul>
 </nav>
 <!--/ NAVBAR-->
+
+<!-- HEADER: SHOWCASE-->
+
+<header id="showcase">
+    <div class="showcase-content">
+        <h1 class="l-heading">
+            The Sky Is The Limit
+        </h1>
+        <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi est exercitationem laudantium minima nemo
+            sit!
+        </p>
+        <a href="#what" class="btn">Read More</a>
+    </div>
+</header>
+
+<!--/ HEADER: SHOWCASE-->
 </body>
 </html>
