what we do section

--- a/index.html
+++ b/index.html
@@ -45,5 +45,35 @@
 </header>
 
 <!--/ HEADER: SHOWCASE-->
+
+<!-- What we do section -->
+
+<section id="what" class="bg-light py-1">
+    <div class="container">
+        <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+        <div class="items">
+            <div class="item">
+                <i class="fas fa-university fa-2x"></i>
+                <h3>Investment banking</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                    quaerat vel.</p>
+            </div>
+            <div class="item">
+                <i class="fas fa-book-reader fa-2x"></i>
+                <h3>Portfolio management</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                    quaerat vel.</p>
+            </div>
+            <div class="item">
+                <i class="fas fa-pencil-alt fa-2x"></i>
+                <h3>Tax & Custodial</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                    quaerat vel.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- What we do section -->
 </body>
 </html>
