--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
 </section>
 <!-- / Section: Contact -->
 
+<!--Footer -->
+
+<footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container ">
+        <p>Copyright &copy; 2020, EdgeLedger, All Rights Reserved</p>
+    </div>
+
+</footer>
+
+<!-- / Footer -->
+
 <script src="js/main.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpMtiZV2phjymIhdOBfXj2a_-w9bhxgG8&callback=initMap"
