--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
 
 <!-- / Footer -->
 
+<script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+
 <script src="js/main.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpMtiZV2phjymIhdOBfXj2a_-w9bhxgG8&callback=initMap"
