--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <!--font-awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body id="home">
 <!--NAVBAR-->
@@ -54,21 +55,30 @@
         <div class="items">
             <div class="item">
                 <i class="fas fa-university fa-2x"></i>
-                <h3>Investment banking</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
-                    quaerat vel.</p>
+                <div>
+                    <h3>Investment banking</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                        quaerat vel.</p>
+                </div>
+
             </div>
             <div class="item">
                 <i class="fas fa-book-reader fa-2x"></i>
-                <h3>Portfolio management</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
-                    quaerat vel.</p>
+                <div>
+                    <h3>Portfolio management</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                        quaerat vel.</p>
+                </div>
+
             </div>
             <div class="item">
                 <i class="fas fa-pencil-alt fa-2x"></i>
-                <h3>Tax & Custodial</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
-                    quaerat vel.</p>
+                <div>
+                    <h3>Tax & Custodial</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloribus, in nam pariatur
+                        quaerat vel.</p>
+                </div>
+
             </div>
         </div>
     </div>
